--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   font_awesome_flutter: ^8.4.0
   rxdart: ^0.22.0
+  image_picker: ^0.6.0+2
 
 dev_dependencies:
   flutter_test:
