--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -27,6 +27,8 @@ dependencies:
   font_awesome_flutter: ^8.4.0
   rxdart: ^0.22.0
   image_picker: ^0.6.0+2
+  charts_flutter: ^0.6.0
+  provider: ^2.0.0+1
 
 dev_dependencies:
   flutter_test:
