--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: myapp
+name: example
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
@@ -14,22 +14,21 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.2.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  english_words: ^3.1.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  english_words: ^3.1.5
   cupertino_icons: ^0.1.2
   font_awesome_flutter: ^8.4.0
   rxdart: ^0.22.0
   image_picker: ^0.6.0+2
   charts_flutter: ^0.6.0
   provider: ^2.0.0+1
-  google_maps_flutter: 
 
 dev_dependencies:
   flutter_test:
@@ -48,11 +47,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-   - assets/images/insta_logo.png
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
+  assets:
+   - assets/images/insta_logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -65,16 +64,6 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: Billabong
-      fonts:
-        - asset: assets/fonts/Billabong.ttf
-    - family: Aveny
-      fonts:
-        - asset: assets/fonts/AvenyTRegular.otf
-          style: normal
-        - asset: assets/fonts/AvenyTMedium.otf
-          style: italic
   # fonts:
   #   - family: Schyler
   #     fonts:
@@ -86,6 +75,18 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
+
+  fonts:
+    - family: Billabong
+      fonts:
+        - asset: assets/fonts/Billabong.ttf
+    - family: Aveny
+      fonts:
+        - asset: assets/fonts/AvenyTRegular.otf
+          style: normal
+        - asset: assets/fonts/AvenyTMedium.otf
+          style: italic
+          
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
