--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,4 @@
-include ':app'
+include ':app', ':alipaySdk-15.6.4-20190611174359-noUtdid'
 
 def flutterProjectRoot = rootProject.projectDir.parentFile.toPath()
 
