--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   charts_flutter: ^0.6.0
   provider: ^3.0.0+1
   google_maps: ^3.4.0
+  http: ^0.12.0+2
 
 dev_dependencies:
   flutter_test:
