--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,6 +57,7 @@ flutter {
 dependencies {
     implementation (name: 'alipaySdk-15.6.4-20190611174341', ext: 'aar')
     implementation "com.android.support:appcompat-v7:28.0.0"
+    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
